--- a/EDA_Hotel_Booking.ipynb
+++ b/EDA_Hotel_Booking.ipynb
@@ -2194,6 +2194,286 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Chart - 15"
+      ],
+      "metadata": {
+        "id": "Q_lSELC-x3xK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Chart - 15 Visualisation Code\n",
+        "temp_df = df.groupby('lead_time')['is_canceled'].describe()\n",
+        "sns.relplot(data = temp_df,x = temp_df.index,y = temp_df['mean']*100,kind = 'scatter',aspect =1.5,height = 6)\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "lEuf6FAA6KTR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### 1. Why did you pick the specific chart?"
+      ],
+      "metadata": {
+        "id": "DAbdoqOG8_Vd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Sctter Plot is used to find the relationship between two Numerical Variables."
+      ],
+      "metadata": {
+        "id": "IzqvXndM9Bdn"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### 2. What is/are the insight(s) found from the chart?"
+      ],
+      "metadata": {
+        "id": "yQiXO19e9X9P"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Lead time has a positive correlation with the Cancellation mean as lead time increases the chances of booking get cancelled also increases."
+      ],
+      "metadata": {
+        "id": "3uRlCKxI9ZMX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### 3. Will the gained insights help creating a positive business impact? \n",
+        "Are there any insights that lead to negative growth? Justify with specific reason."
+      ],
+      "metadata": {
+        "id": "I9Ql2I4N-FKr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Hotels must try to decrease lead time to avoid booking cancellation from the guest."
+      ],
+      "metadata": {
+        "id": "snoVytiT-Gl4"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Chart - 16"
+      ],
+      "metadata": {
+        "id": "Di5bZFCW-bAi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Chart 16 Visualisation Code\n",
+        "sns.catplot(data = df,x = 'deposit_type',kind = 'count',hue = 'is_canceled',height = 7,aspect = 1.5,palette = \"husl\")\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "15q7UpHe-e25"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### 2. What is/are the insight(s) found from the chart?"
+      ],
+      "metadata": {
+        "id": "8vFotFPlA1d9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Around 25% of bookings were cancelled by guests with no deposit. These numbers are huge if the hotels were not able to replace the cancelled bookings in time. So it's obvious that guests who do not pay any deposit while booking are likely to cancel more reservations. Also it is interesting to note that non-refundable deposits had more cancellation than refundable deposits. Logically one would have assumed that refundable deposits have more cancellation as hotel rates are usually higher for refundable deposit type rooms and customers pay more in anticipation of cancellation."
+      ],
+      "metadata": {
+        "id": "Cnk0yUoVA222"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Chart - 17"
+      ],
+      "metadata": {
+        "id": "jwvnF9GcBWqA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Applying groupby on distribution_channel & hotel and taking sum on 'is_canceled'\n",
+        "canceled_df = df.groupby(['distribution_channel'])['is_canceled'].sum().reset_index().rename(columns = {'is_canceled':\"total_canceled\"})\n",
+        "canceled_df"
+      ],
+      "metadata": {
+        "id": "8xTQEt53EBHZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Applying groupby on distribution_channel so that we can find number of boooking made through each channel.\n",
+        "book_df = df.groupby('distribution_channel').size().reset_index().rename(columns = {0:'bookings'})\n",
+        "book_df"
+      ],
+      "metadata": {
+        "id": "qvuYj5_FEwFD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Merging above two dataframe\n",
+        "merged_df = pd.merge(canceled_df,book_df,how = 'inner',on = 'distribution_channel')\n",
+        "# Adding a column % cancellation\n",
+        "merged_df['% cancellation'] = merged_df['total_canceled']*100/merged_df['bookings']\n",
+        "merged_df"
+      ],
+      "metadata": {
+        "id": "5Q47oy1gF0Lg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Chart 16 Visualisation Code\n",
+        "sns.catplot(data = df,x = 'distribution_channel',kind = 'count',hue = 'is_canceled',height = 11,aspect = 2.5,palette = \"husl\")\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "sSAyddylBZ89"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### 2. What is/are the insight(s) found from the chart?"
+      ],
+      "metadata": {
+        "id": "9uNsJiINIGMw"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Total 69028 bookins were made by TA/TO in which 21400 were cancelled which is approximately 31%."
+      ],
+      "metadata": {
+        "id": "dvFG17BmIHnZ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Chart-18"
+      ],
+      "metadata": {
+        "id": "J-44yyCyKHsW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Applying groupby on market_segment & hotel and taking sum on 'is_canceled'.\n",
+        "canceled_df_ = df.groupby(['market_segment'])['is_canceled'].sum().reset_index().rename(columns = {'is_canceled':\"total_canceled\"})\n",
+        "canceled_df_"
+      ],
+      "metadata": {
+        "id": "a8guKFVvKL8E"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Applying groupby on market_segment so that we can find number of boooking made through each channel.\n",
+        "book_df_ = df.groupby('market_segment').size().reset_index().rename(columns = {0:'bookings'})\n",
+        "book_df_"
+      ],
+      "metadata": {
+        "id": "rXeN5PmPMqXD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Merging above two dataframe\n",
+        "merged_df_ = pd.merge(canceled_df_,book_df_,how = 'inner',on = 'market_segment')\n",
+        "# Adding a column % cancellation\n",
+        "merged_df_['% cancellation'] = merged_df_['total_canceled']*100/merged_df_['bookings']\n",
+        "merged_df_"
+      ],
+      "metadata": {
+        "id": "CBquQi4jNENv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Chart 18 Visualisation Code\n",
+        "sns.catplot(data = df,x = 'market_segment',kind = 'count',hue = 'is_canceled',height = 11,aspect = 2.5,palette = \"husl\")\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "VXTNRMkdNn-C"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### 2. What is/are the insight(s) found from the chart?"
+      ],
+      "metadata": {
+        "id": "Fh-lLd5_R0Kc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Online TA has around 35% cancellation rate followed by Groups which has around 27% Cancellation rate."
+      ],
+      "metadata": {
+        "id": "09sEaXLUR1t8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "#### Chart - 14 - Correlation Heatmap"
       ],
       "metadata": {
@@ -2245,15 +2525,6 @@
       ],
       "metadata": {
         "id": "bfSqtnDqZNRR"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here"
-      ],
-      "metadata": {
-        "id": "hc5Dm3VNykDW"
       }
     },
     {
