--- a/EDA_Hotel_Booking.ipynb
+++ b/EDA_Hotel_Booking.ipynb
@@ -65,7 +65,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Write the summary here within 500-600 words."
+        "This project aimed to conduct an exploratory data analysis (EDA) on a dataset containing information on various aspects of hotel bookings. The dataset includes information on whether or not the booking was cancelled, how far in advance the booking was made, the arrival date, meal type, country, market segment, distribution channel, and whether or not the guest is a repeat customer. It also includes information on previous cancellations, previous bookings that were not cancelled, the type of room that was reserved and assigned, the number of booking changes, deposit type, agent details, days on waiting list, customer type, average daily rate (ADR), number of required parking spaces, number of special requests, reservation status, and the total number of people and the total stay.\n",
+        "\n",
+        "The first step in the EDA process was to clean and preprocess the data. This involved checking for missing or inconsistent data, removing outliers and transforming variables as necessary. This step was crucial in ensuring that the final analysis was based on accurate and reliable data.\n",
+        "\n",
+        "Once the data had been cleaned, the next step was to visualize the distributions of the different variables. This was done using various plots such as line plot, bar charts,count plot, and scatter plots. These visualizations helped to identify patterns and trends in the data and provided a good starting point for further analysis.\n",
+        "\n",
+        "One of the key findings from the analysis was that most of the bookings made were not canceled. This suggests that most of the customers who made a reservation actually showed up and stayed at the hotel. Another interesting finding was that the majority of the bookings were made in the months of June and July. This is consistent with the idea that these months are typically the busiest travel months of the year. Additionally, the majority of the bookings were made in the country of Portugal, which indicates that the dataset is likely to be representative of hotel bookings in Portugal.\n",
+        "\n",
+        "The most common market segment were Online TA and Offline TA/TO and the majority of the bookings were made through the TA/TO distribution channel. This suggests that most of the bookings were made by travel agents or tour operators, rather than individual customers. \n",
+        "\n",
+        "The majority of the bookings were made for a \"A\" room type, which is not surprising as standard rooms are typically the most common type of room offered by hotels. Additionally, the majority of the bookings were made by travel agents and the majority of the bookings were made with no deposit. This may indicate that travel agents and tour operators typically make bookings on behalf of their clients and that most clients are not required to make a deposit when making a reservation.\n",
+        "\n",
+        "Overall, this EDA provided valuable insights into the characteristics of the hotel bookings in the dataset and helped to identify potential areas for further investigation. The dataset included rich information on different aspects of hotel booking which could help in understanding the booking trends and making data-driven decisions. Additionally, the findings from this analysis could be useful for hotel management and for those working in the tourism and travel industry, to understand the booking trends and make informed decisions."
       ],
       "metadata": {
         "id": "F6v_1wHtG2nS"
@@ -83,7 +95,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Provide your GitHub Link here."
+        "https://github.com/thepankaj018/EDA-Hotel-Booking.git"
       ],
       "metadata": {
         "id": "h1o69JH3Eqqn"
@@ -10412,9 +10424,7 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
+      "source": [],
       "metadata": {
         "id": "pASKb0qOza21"
       }
