--- a/EDA_Hotel_Booking.ipynb
+++ b/EDA_Hotel_Booking.ipynb
@@ -10424,7 +10424,34 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "###Maximizing revenue:\n",
+        "1.City hotels are the most preferred hotel type by guests and are generating more revenue than resort hotels. The client can focus on promoting city hotels and target high-value customers.\n",
+        "\n",
+        "2.The client can also consider increasing room prices for city hotels, as their ADR is higher than resort hotels.\n",
+        "\n",
+        "3.The hotel can also target customers from Portugal, as they are the largest group of guests.\n",
+        "\n",
+        "###Improving customer satisfaction:\n",
+        "1.The hotel can focus on reducing the booking cancellation rate, especially for city hotels, as it is high at 30%.\n",
+        "\n",
+        "2.The hotel can also consider offering more flexible booking policies or personalized incentives to mitigate cancellation.\n",
+        "\n",
+        "3.The hotel can also consider improving the room allocation process, as 19% of customers did not cancel their bookings even after not getting the same room type they reserved.\n",
+        "\n",
+        "4.The hotel can also offer BB (Bed & Breakfast) as the most preferred meal package as per the conclusion.\n",
+        "\n",
+        "###Identifying key features that influence customer's decision:\n",
+        "1.The hotel can consider BB (Bed & Breakfast) as the most preferred meal package as per the conclusion.\n",
+        "\n",
+        "2.The hotel can also promote city hotels, as they are the most preferred hotel type.\n",
+        "\n",
+        "###Identifying key market segment:\n",
+        "\n",
+        "1.The hotel can target customers from Portugal, as they are the largest group of guests.\n",
+        "\n",
+        "2.The hotel can also target TA/TO (travel agents/Tour operators) as 79.1 % of bookings were made through them."
+      ],
       "metadata": {
         "id": "pASKb0qOza21"
       }
@@ -10441,7 +10468,64 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Write the conclusion here."
+        "1.City hotel has the most number of bookings and it is the most preferred hotel by the visitors.\n",
+        "\n",
+        "2.BB(Bed and Breakfast) is preferred by most number of guests.\n",
+        "\n",
+        "3.Most visitors are from Portugal(PRT) more than 25000 followed by United Kingdom(GBR) around 10000.\n",
+        "\n",
+        "4.Disrribution Channel 'TA/TO' is mostly used for booking hotels.\n",
+        "\n",
+        "5.Most Prefered Room type is \"A\"\n",
+        "\n",
+        "6.Transient Customer type is maximum While Group is minimum.\n",
+        "\n",
+        "7.Most guest does not need parking space at all only few guest asked for parking space of one car.\n",
+        "\n",
+        "8.Most of the guests around 80% does't made any changes to the booking and around 12% of guest made one changes in their booking.\n",
+        "\n",
+        "9.Total 27.5% of booking were cancelled out of which 30% of cancellation comes from City Hotel and 24% of cancellation comes from Resort Hotel. So,City Hotel has higher rate of cancellation.\n",
+        "\n",
+        "10.Resort hotel has slightly higher lead time in comparison to City hotel.\n",
+        "\n",
+        "\n",
+        "11.a).2016 had been the best year for these hotels in terms of booking\n",
+        "\n",
+        "11.b).Year 2015 City Hotel and Resort Hotel had excatly same number of bookings but after 2015 City Hotel has more number of bookings.\n",
+        "\n",
+        "11.c).Year 2016 City Hotel had more than 250000 bookings while Resort Hotel has around 15000 bookings whereas in 2017 City Hotel had around 20000 bookings while Resort Hotel had around 12000 bookings.\n",
+        "\n",
+        "12.July and August months had the most Bookings.\n",
+        "\n",
+        "13.Both the hotel has lower retention rate i.e 3.9% in which City hotel has retention rate of 3.11% and Resort hotel has retentionn rate of 5.02%.\n",
+        "\n",
+        "14.a)For Resort Hotel adr starts to increase from May and increases upto July after that is starts to decrease.\n",
+        "\n",
+        "14.b)For City Hotel adr starts to increase fron March and increases upto April after that is starts to decrease.\n",
+        "\n",
+        "15.Lead time has a positive correlation with the Cancellation mean as lead time increases the chances of booking get cancelled also increases.\n",
+        "\n",
+        "16.Around 25% of bookings were cancelled by guests with no deposit.So it's obvious that guests who do not pay any deposit while booking are likely to cancel more reservations. Also it is interesting to note that non-refundable deposits had more cancellation than refundable deposits.\n",
+        "\n",
+        "17.Total 69028 bookings were made by TA/TO in which 21400 were cancelled which is approximately 31%.\n",
+        "\n",
+        "18.Online TA has around 35% cancellation rate followed by Groups which has around 27% Cancellation rate.\n",
+        "\n",
+        "19.Distribution Channnel \"Direct\" & \"TA/TO\" has contributed more in ADR in both the hotels.\n",
+        "\n",
+        "20.Majority of people are getting room of their choices.\n",
+        "\n",
+        "21.Only 2.5% of guest cancel the bookings even if the guests are not assigned with rooms which they reserved during booking.\n",
+        "\n",
+        "22.'Direct' and 'Online TA' are contributing the most in both types of hotels.\n",
+        "\n",
+        "23.Most of the People stays in these hotels are within 7 days and people staying 1 to 3 days are more in number.\n",
+        "\n",
+        "24.a)Total stay and lead time is positively correlated which impliees if total stay increases then lead time also increases which is quite obvious.\n",
+        "\n",
+        "24.b)Repeated guest and previous booking not cancelled has correlation of 0.44 which implies old guests not cancelled most of their booking.\n",
+        "\n",
+        "24.c)Adr and total stay has positive correlation which implies as the number of stay increases the adr also increases."
       ],
       "metadata": {
         "id": "Fjb1IsQkh3yE"
